# report-collector

./: .gitignore  AGENTS.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: codex-unified-handoff-prompt.md
docs/architecture-analysis/: 2026-04-22-financial-report-analysis-architecture-gap-assessment.md  2026-04-22-turtle-asset-quality-p3-sample-onboarding.md  2026-04-22-turtle-cash-health-p4b-sample-onboarding.md  2026-04-22-turtle-invest-field-coverage-alignment.md  2026-04-22-turtle-invest-required-field-inventory.md  2026-04-22-turtle-v015-financial-field-gap-analysis.md  2026-04-23-durable-storage-and-historical-ingestion-sample-inventory.md  2026-04-23-turtle-investor-core-statement-gaps-p4c-sample-onboarding.md  (+7 more)
financial-report-analysis/: .env.example  Makefile  README.md  pyproject.toml
financial-report-analysis/scripts/: report_metric_availability.py  run-real-pdf-matrix.sh
financial-report-analysis/src/financial_report_analysis/: __init__.py  pipeline.py  unit_policy.py
financial-report-analysis/src/financial_report_analysis/adapters/: __init__.py  report_adapter.py
financial-report-analysis/src/financial_report_analysis/api/: __init__.py  app.py  extract_write_service.py  routes.py  runtime.py  schemas.py
financial-report-analysis/src/financial_report_analysis/ingestion/: __init__.py  note_disclosure.py  pdf_ingestion.py  table_classifier.py  table_header_parser.py  table_semantics.py  table_source.py  table_stitcher.py  table_structure.py
financial-report-analysis/src/financial_report_analysis/models/: __init__.py  common.py  document.py  evidence.py  facts.py  governance.py  period.py  table.py  table_semantics.py
financial-report-analysis/src/financial_report_analysis/p5/: __init__.py  artifact_repository.py  availability.py  dataset.py  db_assembly_service.py  extraction.py  lineage.py  manifest.py  metric_availability_report.py  models.py  ollama_fallback_e2e.py  recompute.py  review.py  runner.py  turtle_export.py
financial-report-analysis/src/financial_report_analysis/registries/: __init__.py  metric_governance.py  metric_mapping.py  metric_registry.py  period_registry.py
financial-report-analysis/src/financial_report_analysis/semantic_fallback/: __init__.py  client.py  config.py  models.py  ollama_client.py  service.py
financial-report-analysis/src/financial_report_analysis/services/: __init__.py  conflict_resolver.py  derivation_service.py  fact_normalizer.py  metric_governance_review.py  table_fact_builder.py  validation_service.py
financial-report-analysis/src/financial_report_analysis/storage/: artifacts.py  database.py  historical_ingestion.py  models.py  repositories.py
financial-report-analysis/tests/fixtures/: p5_seed_manifest.json
financial-report-analysis/tests/integration/: test_analysis_api.py  test_annual_structure_recovery.py  test_api_storage_runtime.py  test_document_ledger_persistence.py  test_metric_governance_api.py  test_ollama_real_report_probes.py  test_ollama_smoke.py  test_p5_availability_real_pdf_seed_contract.py  test_p5_persisted_seed_dataset.py  test_p5_recompute_review_flow.py  test_p5_seed_dataset.py  test_real_pdf_extract_persist_e2e.py  test_semantic_recovery_regressions.py  test_storage_p5_parity.py  test_storage_query_audit_integration.py  test_table_structure_ingestion.py
financial-report-analysis/tests/integration/fixtures/: __init__.py  ollama_real_report_probes.py
financial-report-analysis/tests/unit/: test_api_schemas.py  test_api_storage_runtime.py  test_db_assembly_service.py  test_document_ledger_models.py  test_document_ledger_repository.py  test_extract_write_service.py  test_fact_pipeline.py  test_historical_ingestion.py  test_metric_availability_report.py  test_metric_governance.py  test_metric_governance_decision_repository.py  test_metric_governance_review_service.py  test_metric_mapping_registry.py  test_metric_registry.py  test_models.py  test_note_disclosure_ingestion.py  test_ollama_client.py  test_ollama_fallback_e2e_case.py  test_p5_artifact_repository.py  test_p5_availability.py  test_p5_dataset.py  test_p5_extraction.py  test_p5_lineage.py  test_p5_manifest.py  test_p5_recompute.py  test_p5_review.py  test_p5_runner.py  test_p5_turtle_export.py  test_period_registry.py  test_public_exports.py  test_real_pdf_matrix_script.py  test_report_adapter.py  test_semantic_fallback_config.py  test_semantic_fallback_models.py  test_semantic_fallback_service.py  test_storage_models.py  test_storage_query_audit.py  test_storage_repository.py  test_table_classifier.py  test_table_fact_builder.py  (+7 more)
pdf-reader-mcp/: package.json  pnpm-lock.yaml
report/: .env.example  .gitignore  README.md  openapi.json  pyproject.toml  requirements.txt  test_cache.py  test_hk_extract.py
report/.github/workflows/: test.yml
report/docs/: hk_report_period_model_plan.md
report/examples/: usage_examples.py
report/scripts/: migrate_v2_cache_table.py
report/src/: __init__.py  config.py  main.py  pdf_manager.py  server.py
report/src/api/: __init__.py  app.py  dependencies.py  exceptions.py
report/src/api/routes/: __init__.py  cache.py  download.py  extract.py  query.py  search.py
report/src/api/schemas/: __init__.py  common.py  download.py  extract.py  search.py
report/src/handlers/: __init__.py  pdf_handler.py
report/src/pdf_parser/: __init__.py  content_extractor.py
report/src/pdf_sources/: __init__.py  backup_downloader.py  cninfo_downloader.py  hkex_downloader.py
report/src/utils/: data_formatter.py  validators.py
report/tests/: __init__.py  conftest.py
report/tests/fixtures/: __init__.py  sample_data.py
report/tests/integration/: test_cn_annual_period_regression.py  test_cninfo_downloader.py  test_financial_report_analysis_api.py  test_hk_09987_period_extraction.py  test_hkex_downloader.py  test_mcp_server.py  test_pdf_handler.py
report/tests/unit/: test_config.py  test_content_extractor.py  test_extract_schema_negotiation.py  test_fact_evidence_mapping.py  test_pdf_manager.py  test_period_classifier.py  test_search_latest_reports.py  test_validators.py
(+93 files in other folders)
