[project]
name = "financial-report-analysis"
version = "0.1.0"
description = "Financial report analysis domain models and utilities"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pdfplumber>=0.11.0",
    "pypdf>=4.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
financial-report-analysis-api = "financial_report_analysis.api.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/financial_report_analysis"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["-v"]
